# peroose

./: .gitignore  README.md  buildrelease.sh  environment.yml  pyproject.toml  setup.py  testrelease.sh  uploadrelease.sh
peroose/: __init__.py  __main__.py  fileio.py
src/peroose/: __init__.py  __main__.py  fileio.py
tests/: test_peroose.py  test_version.py
