[tool.poetry]
name = "peroose"
version = "0.4.0"
description = "A python-based command line tool to peruse ROOT files."
license = "MIT"
authors = ["David Hadley <davehadley@users.noreply.github.com>"]
packages = [ { include = "peroose", from = "src" } ]
readme = "README.md"
homepage = "https://github.com/davehadley/peroose"
repository = "https://pypi.org/project/peroose/"
classifiers=[
          "Programming Language :: Python :: 3 :: Only",
          "License :: OSI Approved :: MIT License",
          "Development Status :: 2 - Pre-Alpha",
          "Operating System :: POSIX",
          "Intended Audience :: Science/Research",
          "Topic :: Scientific/Engineering :: Physics"
]

[tool.poetry.dependencies]
python = "^3.6.1"
ipython = "^7.15.0"
uproot = "^3.11.7"

[tool.poetry.scripts]
peroose = "peroose.__main__:main"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.8.2"
flake8 = "^3.8.4"
mypy = "^0.790"
isort = "^5.6.4"
black = "^20.8b1"

[tool.black]
target_version = ['py36', 'py37', 'py38']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

